Updated DAO classes and added custom exceptions